Closed
Bug 612007
Opened 15 years ago
Closed 15 years ago
Block D3D9 layers on nvidia 6200 TC due to black & white horizontal bars/glitches in page content area when scrolling
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | final+ |
People
(Reporter: emorley, Assigned: bjacob)
References
()
Details
(Keywords: qablocker, qawanted, regression, Whiteboard: [softblocker])
Attachments
(3 files, 2 obsolete files)
User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8pre) Gecko/20101112 Firefox/4.0b8pre
Build Identifier: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8pre) Gecko/20101112 Firefox/4.0b8pre
When scrolling pages using both normal mouse scroll and also middle mouse click autoscroll, approx 20% of pages generate graphical glitches (alternating black and white horizontal bars / stripes) in the page area.
The issue only occurs when "use hardware acceleration" is enabled in prefs and occurs even on pages without plugins.
Reproducible: Sometimes
Steps to Reproduce:
1. Open latest nightly with hardware acceleration enabled in prefs.
2. Navigate to a page that is fairly long and would need lots of scrolling using the mouse wheel, eg: http://planet.firefox.com/ (but works on many other pages too)
3. Scroll the page repeatedly using either standard mouse wheel scroll, or middle click mouse wheel and autoscroll. (The former seems to cause the problem more frequently).
4. Watch page content for graphical glitches.
Actual Results:
Graphical glitches (alternating black and white horizontal bars / stripes) appear in the page area. See screenshot attachment.
Expected Results:
Scrolling occurs without graphical glitches, ie: the same visually as if hardware acceleration was turned off.
When the glitches occur, if the page is scrolled more, such that the visually corrupted areas go off-screen, they don't usually return when the page is scrolled back again.
Alternatively when the glitches are shown, if the Minefield window is resized (eg: toggle fullscreen on and off using F11, or else manually change the window size), they disappear and the page renders fine until the next occurrence.
## Graphics section of about:support ##
Adapter Description: NVIDIA GeForce 6200 TurboCache(TM)
Vendor ID: 10de
Device ID: 0161
Adapter RAM: 64
Adapter Drivers: nvd3dumx,nvd3dum
Driver Version: 8.17.12.5896
Driver Date: 7-9-2010
Direct2D Enabled: false
DirectWrite Enabled: false
GPU Accelerated Windows: 1/1 Direct3D 9
Also, if it helps at all, here is my Grafx Bot's test results:
http://brasstacks.mozilla.com/resultserv/data/results/caec9370-31af-4067-bf12-587306fa7cbf
Please let me know if there is any more information that I can provide, or if there is anything I can do to help narrow down the cause.
Thanks!
| Reporter | ||
Comment 1•15 years ago
|
||
Example when scrolling http://planet.firefox.com/
| Reporter | ||
Comment 2•15 years ago
|
||
Other URLs that have displayed the issue recently:
- https://bugzilla.mozilla.org/buglist.cgi?quicksearch=scrolling
- http://arstechnica.com/science/news/2010/11/why-neurons-die-in-parkinsons-patients.ars?comments=1#comments-bar
| Reporter | ||
Updated•15 years ago
|
blocking2.0: --- → ?
Summary: Graphical glitches (black & white horizontal stripes) in page content area when scrolling with H/W acceleration → [D3D9] Black & white horizontal bars/glitches in page content area when scrolling with H/W acceleration
Version: unspecified → Trunk
| Reporter | ||
Updated•15 years ago
|
Keywords: regression
| Reporter | ||
Comment 4•15 years ago
|
||
Exists in latest nightly:
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8pre) Gecko/20101129 Firefox/4.0b8pre
Comment 5•15 years ago
|
||
This is pretty weird, did you try updating to the latest drivers? There was a bug related to stretchrect they've fixed recently.
| Reporter | ||
Comment 6•15 years ago
|
||
Just did a clean install of the latest nVidia drivers available (260.99).
Issues existed using same nightly as comment 4.
Output of about:support, graphics section:
Adapter Description: NVIDIA GeForce 6200 TurboCache(TM)
Vendor ID: 10de
Device ID: 0161
Adapter RAM: 64
Adapter Drivers: nvd3dumx,nvd3dum
Driver Version: 8.17.12.6099
Driver Date: 10-16-2010
Direct2D Enabled: false
DirectWrite Enabled: false
GPU Accelerated Windows: 1/1 Direct3D 9
Thanks :-)
| Reporter | ||
Comment 7•15 years ago
|
||
s/Issues existed/The same issue as in the screenshot attachment exists
| Reporter | ||
Comment 8•15 years ago
|
||
Still exists using:
- Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8pre) Gecko/20101209 Firefox/4.0b8pre ID:20101209030340
- Same gfx config/driver as comment 6. (Latest nVidia driver)
Status: UNCONFIRMED → NEW
blocking2.0: --- → ?
Ever confirmed: true
Hardware: x86_64 → x86
Updated•15 years ago
|
Assignee: nobody → bas.schouten
blocking2.0: ? → betaN+
| Reporter | ||
Updated•15 years ago
|
Blocks: d3d9-layers
Comment 9•15 years ago
|
||
If we can't confirm this, we might need to unblock.
Comment 10•15 years ago
|
||
since this happens on http://planet.firefox.com/ seems like a good candidate to post to dev.planning or some other highly visible newsgroup and get people to try out the test case and report back if they see problem. leverage the power of 83,000 nightly testers!
Comment 11•15 years ago
|
||
This still looks a lot like an NVidia bug. That device is ancient and we may just have to blocklist it, it shouldn't affect a lot of people.
Comment 12•15 years ago
|
||
Considering the extremely low prevalence I think if this should block at all, it should be Final and not Beta.
blocking2.0: betaN+ → ?
Comment 13•15 years ago
|
||
I don't think it's a bug in Firefox.
I remember i had the same effect on my old computer using 3.5 Final.
As far as i can remember, it was caused by unstable graphic card setting in BIOS. After setting failsafe defaults in BIOS, the problem was no longer present.
Please test your graphics using FurMark (or similar): http://www.ozone3d.net/benchmarks/fur/
If you see any artifacts like in the videos on the site, your graphic card settings are unstable and need to be reset.
| Reporter | ||
Comment 14•15 years ago
|
||
(In reply to comment #13)
> I don't think it's a bug in Firefox.
> I remember i had the same effect on my old computer using 3.5 Final.
This bug only occurs with hardware acceleration enabled (see comment 0). Therefore it is not possible for this issue to occur on 3.5 final, so your issue is something different. (Hardware accel only existed in trunk builds way after 3.5/3.6).
Either way, even if this is not a bug in Firefox, but instead graphics card incompatibility (the 6200 is ancient after all), all the user will care about is that Firefox used to work fine and now it doesn't - so the 6200 would need to be blacklisted.
However, the recent D3D code changes (as of the last couple of weeks) seem to have turned off D3D9 acceleration for the card anyway (ie: now shows "0/1 windows accelerated" at the bottom of about:support, even when "enable hardware accel where possible" is ticked in prefs), which may possibly have mitigated the problem.
I don't have access to the machine/6200 card in question until after the holidays, but will confirm resolved/work out a date range when I get back.
Comment 15•15 years ago
|
||
(In reply to comment #14)
> This bug only occurs with hardware acceleration enabled (see comment 0).
> Therefore it is not possible for this issue to occur on 3.5 final, so your
> issue is something different. (Hardware accel only existed in trunk builds way
> after 3.5/3.6).
>
> Either way, even if this is not a bug in Firefox, but instead graphics card
> incompatibility (the 6200 is ancient after all), all the user will care about
> is that Firefox used to work fine and now it doesn't - so the 6200 would need
> to be blacklisted.
Some of my friends told me they had the same issue using different builds of Firefox on old graphic cards.
Because i have never heard of this happening with new graphic cards, i think this is mainly the same bug, that occurs if the current used build utilizes some graphic routines which are for any reason not fully compatible with the graphic card.
So i would agree to blacklist the GeForce 6200 if this bug remains after restoring the graphic cards default settings. (There should be an option for restoring failsafe defaults in the settings application of your graphic driver software, also you should reset your BIOS to factory/failsafe settings as this sometimes resolves such issues.)
| Reporter | ||
Comment 16•15 years ago
|
||
(In reply to comment #14)
> However, the recent D3D code changes (as of the last couple of weeks) seem to
> have turned off D3D9 acceleration for the card anyway (ie: now shows "0/1
> windows accelerated" at the bottom of about:support, even when "enable hardware
> accel where possible" is ticked in prefs), which may possibly have mitigated
> the problem.
>
> I don't have access to the machine/6200 card in question until after the
> holidays, but will confirm resolved/work out a date range when I get back.
Turns out this was due to the layers.accelerate-all=false pref not being changed to true when the hardware acceleration tickbox in prefs was ticked. After correcting this, D3D9 accel was enabled again:
Adapter Description: NVIDIA GeForce 6200 TurboCache(TM)
Vendor ID: 10de
Device ID: 0161
Adapter RAM: 64
Adapter Drivers: nvd3dumx,nvd3dum
Driver Version: 8.17.12.6099
Driver Date: 10-16-2010
Direct2D Enabled: false
DirectWrite Enabled: false
WebGL Renderer: TransGaming Inc. -- ANGLE -- OpenGL ES 2.0 (git-devel Dec 30 2010 03:42:57)
GPU Accelerated Windows: 1/1 Direct3D 9
More importantly, the issue still exists using: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b9pre) Gecko/20101230 Firefox/4.0b9pre ID:20101230030351
| Reporter | ||
Comment 17•15 years ago
|
||
Seems to happen very frequently (ie: 4 times in 10 mins of normal reading/scrolling) on this page:
http://googlemobile.blogspot.com/
Comment 18•15 years ago
|
||
Let's blacklist the 6200, I don't think there's much we can do here.
Comment 19•15 years ago
|
||
Benoit, can you just blocklist the 6200?
Assignee: bas.schouten → bjacob
Status: UNCONFIRMED → NEW
blocking2.0: ? → final+
Ever confirmed: true
Updated•15 years ago
|
Whiteboard: [softblocker]
Comment 20•15 years ago
|
||
should the summary be updated here to reflect the actual problem and fix? Something like "NVIDIA GeForce 6200 go fix content glitches when scrolling"?
| Reporter | ||
Comment 21•15 years ago
|
||
Morphing title to reflect that this bug is now about blocking the 6200.
Summary: [D3D9] Black & white horizontal bars/glitches in page content area when scrolling with H/W acceleration → Blocklist nvidia 6200 TC due to black & white horizontal bars/glitches in page content area when scrolling
| Reporter | ||
Comment 22•15 years ago
|
||
Also, I'm not entirely convinced by the softblocker status, seeing as this disrupts normal scrolling for users of this card, given that hardware acceleration is enabled by default.
Is there any reason why it's not been made a hardblocker?
| Assignee | ||
Comment 23•15 years ago
|
||
Known PCI device IDs for Nvidia device names matching '6200':
0221 NV44A [GeForce 6200]
0222 NV44 [GeForce 6200 A-LE]
00f3 NV43 [GeForce 6200]
0146 NV43 [Geforce Go 6600TE/6200TE]
014f NV43 [GeForce 6200]
0161 NV44 [GeForce 6200 TurboCache(TM)]
0162 NV44 [GeForce 6200SE TurboCache (TM)]
0163 NV44 [GeForce 6200 LE]
0164 NV44 [GeForce Go 6200]
0167 NV43 [GeForce Go 6200/6400]
0168 NV43 [GeForce Go 6200/6400]
| Assignee | ||
Comment 24•15 years ago
|
||
So, from comment 16, your device ID is 0161, that is:
0161 NV44 [GeForce 6200 TurboCache(TM)]
I will do some googling to find out how much your situation should be generalized to other '6200' devices.
| Assignee | ||
Comment 25•15 years ago
|
||
Apparently TurboCache is a sort of DMA mapping thingy. Seems indeed like a plausible candidate for causing scrolling glitches. Let's focus on that
http://www.pcidatabase.com/vendor_details.php?id=606 confirms that the only two Turbocache devices in the 6200 series are 0x0161 and 0x0162. Later generations still use Turbocache but don't mention it anymore in their commercial names, and we don't have data at this point suggesting that they'd be buggy too.
Patch coming.
| Assignee | ||
Comment 26•15 years ago
|
||
Attachment #508399 -
Flags: review?(joe)
| Assignee | ||
Comment 27•15 years ago
|
||
Actually, let's do this instead: only block d3d9 layers. Indeed, since this isn't a dx10 card, the only relevant features are d3d9 and webgl, and I dont think that we need to block webgl.
Attachment #508399 -
Attachment is obsolete: true
Attachment #508402 -
Flags: review?(joe)
Attachment #508399 -
Flags: review?(joe)
| Assignee | ||
Updated•15 years ago
|
Summary: Blocklist nvidia 6200 TC due to black & white horizontal bars/glitches in page content area when scrolling → Block D3D9 layers on nvidia 6200 TC due to black & white horizontal bars/glitches in page content area when scrolling
Comment 28•15 years ago
|
||
Comment on attachment 508402 [details] [diff] [review]
block d3d9 layers on nvidia 6200 turbocache
Feature is duplicated here, and no blocking status is there.
Proper enumeration support would have prevented this.
Attachment #508402 -
Flags: review?(joe) → review-
| Assignee | ||
Comment 29•15 years ago
|
||
Thanks for catching this!
Attachment #508402 -
Attachment is obsolete: true
Attachment #508499 -
Flags: review?(joe)
Updated•15 years ago
|
Attachment #508499 -
Flags: review?(joe) → review+
| Assignee | ||
Comment 30•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 31•15 years ago
|
||
Just checked with Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b11pre) Gecko/20110201 Firefox/4.0b11pre ID:20110201030339
...and the block works fine.
(ie about:support shows GPU Accelerated Windows: 0/1)
Thanks!
Comment 32•14 years ago
|
||
Hello,
I am a new user to BugZilla so I'm not sure if I should post hear or open a new thread. In case I haven't done well please excuse me.
I currently have Firefox 9.0.1 installed on a Windows XP SP3 machine with nvidia 7400 go. I have just updated my video card drivers to 170.73 hoping I will be able to use the hardware acceleration feature. After that I have noticed that some cards have been blocked (mine also was). So I have forced the hardware acceleration and did some testing. So far so good... couldn't reproduce any of the problems reported.
Maybe the block should be reconsidered.
Thank you!
| Reporter | ||
Comment 33•14 years ago
|
||
(In reply to Adrian-Costin Tundrea from comment #32)
> I currently have Firefox 9.0.1 installed on a Windows XP SP3 machine with
> nvidia 7400 go. I have just updated my video card drivers to 170.73
Hi! Due to problems with older driver versions, 257.21 or newer (June 2010) is required - so is likely due to your driver version and not card. For more info see: https://wiki.mozilla.org/Blocklisting/Blocked_Graphics_Drivers
Comment 34•14 years ago
|
||
I'm sorry, I'm a little bit tired. My driver version is 270.73.
So why it is the block still enabled if the true problem is the driver. As I have seen all older driver versions are blacklisted? And currently there doesn't seem to be a problem.
| Reporter | ||
Comment 35•14 years ago
|
||
I'm not sure sorry (I don't work on hardware acceleration so don't know much about the other reasons for blocklisting). Can you file a new bug in product "core", component "graphics" with title something like "Hardware acceleration disabled with nvidia 7400 go, works fine when force enabled" and make sure to attach a file containing the output of about:support on a clean profile, as well as a summary of the info in your comments above, in the main description. Reply with the bug number of the newly created bug here, and I'll make sure the correct people get CC'd.
Thanks!
Comment 36•14 years ago
|
||
Here is the new Bug 716264. Thank you very much for all your help.
You need to log in
before you can comment on or make changes to this bug.
Description
•