Bug 612007 - Blocklist D3D9 layers on nvidia 6200 TC due to glitches when scrolling - r=joe, a=blocking2.0